--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -5,10 +5,16 @@
 }
 
 html {
-    font-size: 62.5%;
+    font-family: sans-serif;
 }
 
 body {
     width: 100%;
 }
 
+#band {
+    width: 100%;
+    padding-bottom: 30%;
+    background-image: url("/img/gears.jpg");
+    background-size: cover;
+}
