--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -14,7 +14,16 @@ body {
 
 #band {
     width: 100%;
-    padding-bottom: 30%;
+    padding: 10%;
     background-image: url("/img/gears.jpg");
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#band h1 {
+    padding: 1rem;
+    background: #f8f9fa;
+    text-align: center;
 }
