--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -14,7 +14,7 @@ body {
 
 #band {
     width: 100%;
-    padding: 13%;
+    padding: 10%;
     background-image: url("/img/gears.jpg");
     background-size: cover;
     display: flex;
@@ -26,4 +26,14 @@ body {
     padding: 1rem;
     background: #f8f9fa;
     text-align: center;
+}
+
+.frame {
+    padding-top: 1rem;
+    width: 95%;
+    margin: auto;
+}
+
+.frame > div {
+    width: 22%;
 }
