--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -10,6 +10,7 @@ html {
 
 body {
     width: 100%;
+    height: 100vh;
 }
 
 #band {
@@ -38,12 +39,22 @@ body {
     height: 12rem;
 }
 
-.bgImg {
-    background-image: url("/img/gears.jpg");
+.frame > a {
+    width: 17rem;
+    height: 9rem;
+    margin: 0 1rem;
 }
 
-.bgImg > section {
+section {
+    min-height: 85vh;
+    background-image: url("/img/gears.jpg");
+    background-size: cover;
+    padding: .5rem;
+}
+
+section >  div {
     width: 90%;
+    min-height: 80vh;
     margin: 0 auto;
     background: #f8f9fa;
 }
