--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -10,7 +10,7 @@ html {
 
 body {
     width: 100%;
-    height: 100vh;
+    background: #e5eaff;
 }
 
 #band {
@@ -25,18 +25,12 @@ body {
 
 #band h1 {
     padding: 1rem;
-    background: #f8f9fa;
+    background: #e5eaff;
     text-align: center;
 }
 
 .frame {
     padding-top: 1rem;
-    width: 95%;
-}
-
-.frame > div {
-    width: 18rem;
-    height: 12rem;
 }
 
 .frame > a {
@@ -49,13 +43,19 @@ section {
     min-height: 85vh;
     background-image: url("/img/gears.jpg");
     background-size: cover;
-    padding: .5rem;
+    background-attachment: fixed;
+    background-position: center;
 }
 
 section >  div {
     width: 90%;
-    min-height: 80vh;
-    background: #f8f9fa;
+    min-height: 82vh;
+    background: #e5eaff;
+    padding: 1rem 0 4rem 0;
+}
+
+#home {
+    width: 97%;
 }
 
 h2 {
@@ -65,3 +65,8 @@ h2 {
 article {
     margin: 0 1rem;
 }
+
+.card-header {
+    background-color: #9ec5fe;
+}
+
