--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -13,11 +13,14 @@ body {
     background: #e5eaff;
 }
 
+#band, section {
+    background-image: url("/img/gears.jpg");
+    background-size: cover;
+}
+
 #band {
     width: 100%;
     padding: 6%;
-    background-image: url("/img/gears.jpg");
-    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,8 +38,6 @@ main {
 
 section {
     flex-grow: 1;
-    background-image: url("/img/gears.jpg");
-    background-size: cover;
     background-attachment: fixed;
     background-position: center;
 }
@@ -63,5 +64,7 @@ article {
 }
 
 .picture {
-
+    width: 30vw;
+    padding-bottom: 20vw;
+    border: blue 1px solid;
 }
