--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -74,5 +74,7 @@ article {
 .picture {
     width: 30vw;
     padding-bottom: 20vw;
-    border: blue 1px solid;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
